assets/custom.css
/* Undo/tweak some basic stuff from main.css */
.site-header {
	border-top:0 !important;
}
.site-footer {
	padding:15px 0 !important;
}
.footer-col-3 {
	text-align: right;
}
h1.post-title {
	font-family: 'Merienda', cursive;
	font-size: 38px;
	text-align: center;
}
h3 {
	font-family: 'Merienda', cursive;
}

/* background image */
body {
	background-image: url("Background.jpg");
	background-attachment:fixed;
	background-position:top;
	background-repeat:no-repeat;
}

/* Nav area */
nav.site-nav { 
	line-height:115px;
}
nav.site-nav a {
	font-family: 'Merienda', cursive;
	vertical-align:bottom;
}

/* Other personalizations */
.outer {
	background-color:white;
	margin-right: auto;
	margin-left: auto;
}
.oversize {
	margin-top:-30px;
	margin-left:-30px;
	margin-right:-30px;
}
.cardDiv {
	float:left;	
	width:calc((99.9% - (20px * 2)) / 3);
	padding-right:20px;
}
.cardDiv:last-child {
	padding-right:0px;
}
.cardImg {
	border: 1px solid #D3D3D3;
	padding: 3px;
}
.cardSection:after {
    content: "";
    display: table;
    clear: both;
}

img.memberImg {
	margin-left:auto;
	margin-right:auto;
	display:block;
	width:500px;
	padding-bottom:20px;
}
.memberP {
	font-size:18px;
	line-height: 1.4;
}
img.fullPad {
	padding: 10px;
}

div.member-square {
	float:left; 
	text-align:center;
	padding: 8px 8px;
	border: 1px solid #e8e8e8;
	width: 126px;
	height: 158px;
}

a.hoverImage>img {
	display:none;
}
a.hoverImage:hover>img {
	display:block;
	position:fixed;
	width: 700px;
	border-style: ridge;
	top: 121px;
	left: 50%;
	transform: translate(-50%);
	-webkit-animation: fadein 0.7s;
    animation: fadein 0.7s;
}

@media screen and (max-width: 800px) {
	.cardDiv {width: 100%;}
	.cardImg {border:none;}
}

@media screen and (max-width: 600px) {
    #my-site-nav {		
		display: inline;
		width: 195px;
	}
	#my-site-nav .page-link {
		margin-left: 0px;
	}
	#my-site-nav .page-link:nth-child(odd) {
		float: left;		
	}
	#my-site-nav .page-link:nth-child(even) {
		float: right;
	}
}

@-webkit-keyframes fadein {
	from {opacity: 0;}
	to {opacity: 1;)	
}

@keyframes fadein {
	from {opacity: 0;}
	to {opacity: 1;)
}

